# kfs

./: .gdb_history  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  boot.asm  build.rs  grub.cfg  kernel.c  kernel.rs
.cargo/: config.toml
.github/workflows/: rust.yml
crate/io/src/: lib.rs
src/: asm.rs  gdt.rs  gdt.s  idt.rs  input.rs  interface.rs  io.rs  lib.rs  main.rs  shell.rs  utils.rs
src/gdt/: gdt.s  mod.rs
src/idt/: idt.s  mod.rs
src/keyboard/: apple_fr.rs  en.rs  fr.rs  mod.rs
