[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "kernel"           # The name of the target.
path = "src/lib.rs"    # The source file of the target.
edition = "2021"       # The edition of the target.
crate-type = ["staticlib"]   # The crate types to generate.
